--- a/Main.storyboard
+++ b/Main.storyboard
@@ -76,7 +76,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.74272932300000005" green="0.45634112059999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="9HZ-Op-wAC" firstAttribute="leading" secondItem="Ju7-hN-lGJ" secondAttribute="leading" id="1Ti-k2-89V"/>
                                     <constraint firstAttribute="bottom" secondItem="84q-fk-kht" secondAttribute="bottom" id="1dU-mM-dLb"/>
